# imapsync

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.env  start.sh
.github/workflows/: docker-image.yml
src/imapsync/: Email.py  __init__.py  __main__.py  config.py  imap_sync.py  index_database.py
tests/: test_api.py
