[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "imapsync"
dynamic = ["version"]
requires-python = ">=3.11"
readme = "README.md"
description = ""
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pydantic-settings>=2.9.1",
    "pyhtml2md>=1.7.0",
    "python-json-logger>=3.3.0",
    "tqdm>=4.67.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/imapsync/-/issues"
Homepage = "https://github.com/ydethe/imapsync"
Source = "https://github.com/ydethe/imapsync"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py310']

[tool.uv]
resolution = "highest"

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "black==22.3.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
doc = [
    "pdoc3>=0.11.3",
    "pylint>=3.3.2",
]
test = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]
